--- a/02_abc.Rmd
+++ b/02_abc.Rmd
@@ -431,11 +431,8 @@ was the purpose of each package, but also overcharged their computers
 and often leaded to software crashes and data losses. So, please, avoid
 it!
 
-Download the [wine dataset](http://www.federicoroscioli.com/wp-content/uploads/2021/02/Wine.csv),
-change the directory below with the folder where you put the downloaded
-file, and try to import it (it is a text based csv file). Try the same
-with the [village dataset](http://www.federicoroscioli.com/wp-content/uploads/2022/03/Village.xlsx),
-be aware that this one is in Excel format.
+Download the [wine dataset](http://www.federicoroscioli.com/wp-content/uploads/2021/02/Wine.csv), change the directory below with the folder where you put the downloaded
+file, and try to import it (it is a text based csv file). Try the same with the [village dataset](http://www.federicoroscioli.com/wp-content/uploads/2022/03/Village.xlsx), be aware that this one is in Excel format.
 
 ```{r, eval=F}
 # setting the working directory
@@ -454,7 +451,7 @@ village <- read_excel("Village.xlsx")
 To end our first chapter we have to talk also about how to save the
 final output of our work. The most common way is to export our dataframe
 as an excel file. In order to do so, we need to use the package
-"xlsx"[@dragulescu2020]. **Note that it is always important to set the
+"xlsx" [@dragulescu2020]. **Note that it is always important to set the
 working directory in order to tell R where to put our exported file**.
 If we did it at the beginning of our code, there is no need to repeat
 it.
@@ -478,10 +475,8 @@ write.csv(mtcars, file = "mtcars.csv")
 
 -   James, G., Witten, D., Hastie, T., & Tibshirani, R. (2021). An
     Introduction to Statistical Learning (Vol. 103). Springer New York.
-    [Available here](https://www.statlearning.com). Chapter 2.4
-    exercises 8, 9, and 10.
--   [R playground](https://federicoroscioli.shinyapps.io/exercises/), A,
-    B, C
+    [Available here](https://www.statlearning.com). Chapter 2.4 exercises 8, 9, and 10.
+-   [R playground](https://federicoroscioli.shinyapps.io/exercises/), A, B, C
 
 \newpage
 
