new margins for pdf

--- a/docs/_main.tex
+++ b/docs/_main.tex
@@ -136,12 +136,13 @@
 \usepackage{caption}
 \usepackage{ragged2e}
 \usepackage{fancyhdr}
+\usepackage[top=2.5cm, bottom=3cm, left=2.5cm, right=2.5cm, headheight=17pt, includehead, includefoot, heightrounded]{geometry}
 \pagestyle{fancy}
 \fancyhead[LO,RE]{Introduction to Data Analysis with R}
 \fancyhead[LE,RO]{}
 \fancyfoot[C]{}
 \fancyfoot[LE,RO]{\thepage}
-\fancyfoot[LO,RE]{Last updated 18 October, 2023}
+\fancyfoot[LO,RE]{Last updated 22 October, 2023}
 \usepackage{float}
 \ifLuaTeX
   \usepackage{selnolig}  % disable illegal ligatures
@@ -161,7 +162,7 @@
 
 \title{Introduction to Data Analysis with R}
 \author{Federico Roscioli}
-\date{18 October, 2023}
+\date{22 October, 2023}
 
 \begin{document}
 \maketitle
